name:                copier
version:             0.1.0.0
synopsis:            Copies files in parallel for use on networked file systems
homepage:            https://github.com/nh2/copier#readme
license:             MIT
author:              Niklas Hambüchen <mail@nh2.me>
maintainer:          Niklas Hambüchen <mail@nh2.me>
copyright:           2017 Niklas Hambüchen
category:            Application
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Copier
                       InterruptibleUtimensat
                       PooledMapConcurrently
                       Sendfile
                       SafeFFIStat
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , lifted-async
                     , lifted-base
                     , monad-control
                     , mtl
                     , optparse-applicative
                     , posix-paths
                     , text
                     , time
                     , unix
  ghc-options:         -Wall
  default-language:    Haskell2010

executable copier
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N1 -A256M -qb0"
  build-depends:       base
                     , copier
  default-language:    Haskell2010

test-suite copier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N1 -A256M -qb0"
  build-depends:       base
                     , copier
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nh2/copier
